--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~48.0.18",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "randomstring": "^1.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-pager-view": "6.1.2",
