--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "randomstring": "^1.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
