--- a/app.json
+++ b/app.json
@@ -1,6 +1,9 @@
 {
   "expo": {
     "name": "Expo_Food_Detection",
+    "env": {
+      "API_URL": "https://faab-2405-4802-1c6e-ccc0-58b9-6ec4-a779-2f91.ngrok-free.app/"
+    },
     "slug": "Expo_Food_Detection",
     "version": "1.0.0",
     "orientation": "portrait",
