--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "expo-constants": "~14.2.1"
+    "expo-constants": "~14.2.1",
+    "expo-camera": "~13.2.1",
+    "expo-permissions": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
